--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             <p>Coping Skills                December</p>
             <p>Trauma                       ????</p>
             
+        <li><a href="classes.html">Click here to learn more about our classes</a></li>
+
        </div>
 
        <div id="outcome">
