--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <h2> Site Navigation</h2>
         <nav>
             <ul>
-                <li><a href="PAVE.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">Mission</a></li>
                 <li><a href="goal.html">Goals</a></li>
                 <li><a href="process.html">Strategy</a></li>
